# hybridVLA-2

./: .gitignore  CHANGELOG.md  FSDP_recovery_v1_1.md  README.md  advice_with_pi.md  analysis_v0_10_6_summary.md  architecture_v0_10.md  architecture_v0_10_claude.md  comparsion_between_pi_and_hybridVLA.md  comparsion_between_pi_and_hybridVLA_3_claude.md  eval_dtype_v1_1.md  pyproject.toml  requirements.txt  summary_v0_10_7.md
docs/: 4_problems_analysis.md  README.md  accuracy_v0_6.md  accuracy_v0_7.md  analysis_experiment_status.md  analysis_three_stage_dataflow.md  analysis_three_stage_training.md  analysis_three_stage_training_rationale.md  analysis_v0_1.md  analysis_v0_10.md  analysis_v0_10_1.md  analysis_v0_10_3.md  analysis_v0_10_4.md  analysis_v0_10_5.md  analysis_v0_10_5_audit.md  analysis_v0_10_5_review.md  analysis_v0_10_9.md  analysis_v0_10_9_fix_review.md  analysis_v0_10_9_fix_review_v2.md  analysis_v0_10_9_fix_review_v3.md  analysis_v0_2.md  analysis_v0_3.md  analysis_v0_4.md  analysis_v0_5.md  analysis_v0_6.md  analysis_v0_6_1.md  analysis_v0_9.md  analysis_v0_9_1.md  analysis_v0_9_1_bilingual.md  analysis_v0_9_2.md  analysis_v0_9_3.md  analysis_v10_extra.md  analysis_v10_extra_2.md  analysis_v10_extra_2_1.md  analysis_v10_extra_2_2.md  answer_v0_10_9.md  answer_v0_10_9_1.md  architecture_claude_v1_0_1.md  architecture_gpt_v1_0_1.md  backbone_v0_6.md  (+38 more)
libero_hybrid/: AUDIT_CHANGELOG.md  README.md  __init__.py  utils.py
scripts/: __init__.py  compute_stats.py  smoke_fsdp_2gpu.py  train_smoke_test.py  train_stage_a.py  train_unified.py
tests/: conftest.py  (+14 more)
(+63 files in other folders)
